# ivms-reports-aggregator

./: .gitignore  Cargo.toml  Makefile  README.md  buildspec.yml
.github/: dependabot.yml
.github/workflows/: build.yaml
docs/developer-guide/: db.md  setup.md
infrastructure/cloudformation/: config-dev.json  config-prod.json  config-staging.json  db.yaml  fetcher.yaml  integration-tests.yaml  loader.yaml  root.yaml
src/: api.rs  loader.rs  main.rs  model.rs  report_dao.rs  runtime_error.rs
tests/: main.rs
